After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754753 - rtsp-media: don't mutate original string when parsing keymgmt
rtsp-media: don't mutate original string when parsing keymgmt
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other All
: Normal normal
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-09-09 02:35 UTC by Hyunjun Ko
Modified: 2015-09-09 07:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
media: don't mutate original string when parsing keymgmt (1.70 KB, patch)
2015-09-09 02:38 UTC, Hyunjun Ko
none Details | Review

Description Hyunjun Ko 2015-09-09 02:35:13 UTC
This has an issue as same as in commit fe4ed1d1dfbbc858865a59a470331264c6015f4c in gst-plugins-good
Comment 1 Hyunjun Ko 2015-09-09 02:38:25 UTC
Created attachment 310943 [details] [review]
media: don't mutate original string when parsing keymgmt

Actually, this duplicated code is being handled in https://bugzilla.gnome.org/show_bug.cgi?id=745880
Comment 2 Jan Schmidt 2015-09-09 07:57:55 UTC
Thanks, I already had this patch locally - I just hadn't pushed it yet:

commit 315c2f93bb3bd17514dd20fb269684dc2c23ee4d
Author: Jan Schmidt <jan@centricular.com>
Date:   Fri Sep 4 11:23:43 2015 +1000

    rtsp-media: Don't crash on encrypted RTX SDP
    
    In parse_keymgmt(), don't mutate the input string that's been passed
    as const, especially since we might need the original value again if
    the same key info applies to multiple streams (RTX, for example).
    
    https://bugzilla.gnome.org/show_bug.cgi?id=754753